# lcrc

./: .gitignore  Cargo.toml  README.md  askama.toml  build.rs  rustfmt.toml  v1.md
.github/workflows/: ci.yml
_bmad/: config.toml
_bmad-output/brainstorming/: brainstorming-session-2026-04-29.md
_bmad-output/implementation-artifacts/: .review-diff-1-6.patch  1-1-project-scaffold-with-locked-workspace-lints.md  1-10-sandbox-run-task-with-workspace-mount-custom-default-deny-network.md  1-11-llama-server-lifecycle.md  1-12-end-to-end-one-cell-scan-no-html-yet.md  1-13-one-row-html-report-rendering.md  1-14-vendor-per-task-container-image-dockerfile-requirements-bootstrap-ghcr-publish.md  1-2-ci-workflow-gates-fmt-clippy-and-tests.md  1-3-output-module-full-exitcode-enum-error-layer.md  1-4-clap-cli-root-lcrc-version-lcrc-help-tracing-subscriber.md  1-5-machine-fingerprint-module.md  1-6-cache-key-helpers-in-src-cache-key-rs.md  1-7-sqlite-schema-migrations-framework.md  1-8-cache-cell-write-read-api-with-atomic-semantics.md  1-9-container-runtime-preflight-with-socket-precedence-chain.md  deferred-work.md  sprint-status.yaml
_bmad-output/planning-artifacts/: architecture.md  epics.md  implementation-readiness-report-2026-04-30.md  prd.md  product-brief-lcrc-distillate.md  product-brief-lcrc.md  sprint-change-proposal-2026-05-05.md
docs/: release-process.md
image/: Dockerfile  requirements.txt
scripts/: README.md  bmad-auto.sh
src/: cache.rs  cli.rs  constants.rs  error.rs  exit_code.rs  lib.rs  machine.rs  main.rs  output.rs  report.rs  sandbox.rs  scan.rs  util.rs  version.rs
tests/: cache_migrations.rs  cache_roundtrip.rs  cli_exit_codes.rs  cli_help_version.rs  machine_fingerprint.rs  report_render.rs  sandbox_preflight.rs  sandbox_run_task.rs  scan_e2e.rs  server_lifecycle.rs
(+32 files in other folders)
